syntax = "proto3";

option csharp_namespace = "BoardGames.gRPCApi.gRPC";

package Grpc;

// Data retrieval methods
service Grpc {
  rpc GetBoardGame (BoardGameRequest) returns (BoardGameResponse);
  rpc UpdateBoardGame (UpdateBoardGameRequest) returns (BoardGameResponse);
  rpc GetDomain (DomainRequest) returns (DomainResponse);
  rpc UpdateDomain (UpdateDomainRequest) returns (DomainResponse);
  rpc GetMechanic (MechanicRequest) returns (MechanicResponse);
  rpc UpdateMechanic (UpdateMechanicRequest) returns (MechanicResponse);
}

// The numbers placed after the equal sign of each type’s property are their index. 
// The protobuf serialization library will use these index values to serialize and
// compress the actual values.
// Input type definition
message BoardGameRequest {
  int32 id = 1;
}

// Input type definition
message UpdateBoardGameRequest {
  int32 id = 1;
  string name = 2;
}

// Output type definition
message BoardGameResponse {
  int32 id = 1;
  string name = 2;
  int32 year = 3;
}

// Input type definition
message DomainRequest {
  int32 id = 1;
}

// Input type definition
message UpdateDomainRequest {
  int32 id = 1;
  string name = 2;
}

// Output type definition
message DomainResponse {
  int32 id = 1;
  string name = 2;
}

// Input type definition
message MechanicRequest {
  int32 id = 1;
}

// Input type definition
message UpdateMechanicRequest {
  int32 id = 1;
  string name = 2;
}

// Output type definition
message MechanicResponse {
  int32 id = 1;
  string name = 2;
}